--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <a href="educational.html">Finance Education Page</a>
         <a href="budgeting.html">Budgeting System</a>
         <a href="user.html">User Logging</a>
-        <a href="visualizations.html">Data Visualizations</a>
-        <a href="visualizations2.html">Data Visualizations 2</a>
+        <a href="visualizations.html">Categorial Expense Visualizations</a>
+        <a href="visualizations2.html">Daily Expense Visualizations</a>
     </nav>
     <section id ="class">
         <h1>Welcome to the Personal Finance Manager</h1>
