--- a/visualizations.html
+++ b/visualizations.html
@@ -91,7 +91,7 @@
     const layout = {
         title: 'Expense Tracked per Category',
         xaxis: { title: 'Expense Category' },
-        yaxis: { title: 'Expense Amount ($)'}
+        yaxis: { title: 'Expense Amount (US $)'}
     };
 
     Plotly.newPlot('expense-chart', data, layout);
