--- a/visualizations2.html
+++ b/visualizations2.html
@@ -82,7 +82,7 @@
                     }
                 },
                 yaxis: {
-                    title: 'Expense Amount ($)'
+                    title: 'Expense Amount (US $)'
                 }
             };
             Plotly.newPlot('plot', [trace], layout);
