cleaned up all the code

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> 
     <title>Personal Finance Manager</title>
     <style>
         body {
@@ -11,12 +12,10 @@
             padding: 0;
             background-color: #f4f4f4;
         }
-
         nav {
             background-color: black;
             overflow: hidden;
         }
-
         nav a {
             float: left;
             display: block;
@@ -25,16 +24,13 @@
             padding: 14px 16px;
             text-decoration: none;
         }
-
         nav a:hover {
             background-color: #ddd;
             color:blue;
         }
-
         section {
             padding: 20px;
         }
-
         footer {
             background-color: #333;
             color: #fff;
@@ -44,15 +40,15 @@
             bottom: 0;
             width: 100%;
         }
-        #image{
+        #image {
             display: block;
             margin: 20px auto;
             border-radius: 8px;
-            display:flex;
+            display: flex;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            align-items:center;
-            justify-content:center;
-            width:400px;
+            align-items: center;
+            justify-content: center;
+            width: 400px;
         }
         #class {
             max-width: 800px;
@@ -65,7 +61,6 @@
     </style>
 </head>
 <body>
-
     <nav>
         <a href="educational.html">Finance Education Page</a>
         <a href="budgeting.html">Budgeting System</a>
@@ -73,7 +68,7 @@
         <a href="visualizations.html">Categorial Expense Visualizations</a>
         <a href="visualizations2.html">Daily Expense Visualizations</a>
     </nav>
-    <section id ="class">
+    <section id="class">
         <h1>Welcome to the Personal Finance Manager</h1>
         <p>In this webpage, we will provide users with a comprehensive tool for managing their finances effectively.</p>
         <p>There are several features including:</p>
