--- a/budgeting.html
+++ b/budgeting.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css"> 
+    <script src="classes.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budgeting System</title>
     <style>
@@ -11,12 +13,10 @@
             padding: 0;
             background-color: #f4f4f4;
         }
-
         nav {
             background-color: black;
             overflow: hidden;
         }
-
         nav a {
             float: left;
             display: block;
@@ -25,12 +25,10 @@
             padding: 14px 16px;
             text-decoration: none;
         }
-
         nav a:hover {
             background-color: #ddd;
             color: blue;
         }
-
         main {
             padding: 20px;
             background-color: #fff;
@@ -38,16 +36,13 @@
             border: 1.5px solid black;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
         h2 {
             color: #333;
         }
-
         label {
             display: block;
             margin-bottom: 8px;
         }
-
         input {
             width: 98%;
             padding: 8px;
@@ -55,12 +50,10 @@
             border: 1.5px solid black;
             transition: border-color 0.3s ease, transform 0.3s ease;
         }
-
         input:hover {
             border-color: #45a049;
             transform: scale(1.02);
         }
-
         button {
             background-color: #4CAF50;
             color: white;
@@ -69,87 +62,68 @@
             cursor: pointer;
             transition: transform 0.3s ease;
         }
-
         button:hover {
             background-color: #45a049;
             transform: scale(1.1);
         }
-
         button.clicked {
             transform: scale(0.9);
         }
-        
     </style>
 </head>
 <body>
-
     <nav>
         <a href="index.html">Back to homepage</a>
     </nav>
-
     <main>
         <h2>Budgeting System</h2>
         <form id="budgetForm">
             <label for="weeklyBudget">Set Weekly Budget:</label>
             <input type="number" id="weeklyBudget" placeholder="Enter amount" required>
-
             <label for="monthlyBudget">Set Monthly Budget:</label>
             <input type="number" id="monthlyBudget" placeholder="Enter amount" required>
-
             <button type="button" onclick="handleBudgetForm()" onmousedown="buttonClick()" onmouseup="buttonRelease()">Save Budget</button>
         </form>
     </main>
-
     <script>
         class Budget {
             constructor() {
                 this.weeklyBudget = 0;
                 this.monthlyBudget = 0;
             }
-
             setBudgets(weekly, monthly) {
                 this.weeklyBudget = weekly;
                 this.monthlyBudget = monthly;
             }
         }
-
         class BudgetForm {
             constructor(budgetInstance) {
                 this.budget = budgetInstance;
             }
-
             handleForm() {
                 const weeklyBudgetInput = document.getElementById('weeklyBudget');
                 const monthlyBudgetInput = document.getElementById('monthlyBudget');
-
                 const weeklyBudget = parseFloat(weeklyBudgetInput.value);
                 const monthlyBudget = parseFloat(monthlyBudgetInput.value);
-
                 this.budget.setBudgets(weeklyBudget, monthlyBudget);
             }
         }
-
         const budgetInstance = new Budget();
-
         const budgetFormInstance = new BudgetForm(budgetInstance);
-
         function handleBudgetForm() {
             budgetFormInstance.handleForm();
             localStorage.setItem("weekbudget", budgetInstance.weeklyBudget);
             localStorage.setItem("monthbudget", budgetInstance.monthlyBudget);
             alert(`Weekly Budget: $${budgetInstance.weeklyBudget}\nMonthly Budget: $${budgetInstance.monthlyBudget}`);
         }
-
         function buttonClick() {
             const button = document.querySelector('button');
             button.classList.add('clicked');
         }
-
         function buttonRelease() {
             const button = document.querySelector('button');
             button.classList.remove('clicked');
         }
     </script>
-
 </body>
 </html>
