--- a/educational.html
+++ b/educational.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> 
     <title>Financial Education</title>
     <style>
         body {
@@ -12,12 +12,10 @@
             padding: 0;
             background-color: #f4f4f4;
         }
-
         nav {
             background-color: black;
             overflow: hidden;
         }
-
         nav a {
             float: left;
             display: block;
@@ -26,20 +24,17 @@
             padding: 14px 16px;
             text-decoration: none;
         }
-
         nav a:hover {
             background-color: #ddd;
             color: blue;
         }
-
         header {
             background-color: #4CAF50;
             color: white;
             text-align: center;
             padding: 1em;
-            border:2px solid black;
+            border: 2px solid black;
         }
-
         section {
             margin: 20px;
             padding: 20px;
@@ -47,28 +42,22 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
         h2 {
             color: #333;
         }
-
         p {
             line-height: 1.6;
             color: #555;
         }
     </style>
 </head>
-
 <body>
-
     <nav>
         <a href="index.html">Back to homepage</a>
     </nav>
-
     <header>
         <h1>Financial Education</h1>
     </header>
-
     <section>
         <h2>Basic Financial Principles</h2>
         <p>Understanding fundamental financial principles is crucial for managing your money wisely. Here are some key principles:</p>
@@ -79,7 +68,6 @@
             <li><strong>Debt Management:</strong> Avoid accumulating unnecessary debt. If you have debt, have a plan to pay it off systematically.</li>
         </ul>
     </section>
-
     <section>
         <h2>Financial Tips</h2>
         <p>Follow these practical tips to improve your financial well-being:</p>
@@ -90,7 +78,5 @@
             <li><strong>Insurance:</strong> Protect yourself and your assets with appropriate insurance coverage.</li>
         </ul>
     </section>
-
 </body>
-
 </html>
