--- a/user.html
+++ b/user.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> 
+    <script src="classes.js"></script>
     <title>Expense Log</title>
     <style>
         body {
@@ -12,12 +14,10 @@
             background-color: white;
             text-align: center;
         }
-
         h1 {
             text-align: center;
             color: black;
         }
-
         form {
             max-width: 300px;
             margin: 20px auto;
@@ -25,11 +25,9 @@
             padding: 20px;
             border: 2px solid black;
         }
-
         label {
             font-weight: bold;
         }
-
         input,
         select {
             width: 98%;
@@ -39,18 +37,15 @@
             border: 1.5px solid black;
             transition: border-color 0.3s ease, transform 0.3s ease;
         }
-
         input:hover,
         select:hover {
             border-color: #45a049;
             transform: scale(1.03);
         }
-
         nav {
             background-color: black;
             overflow: hidden;
         }
-
         nav a {
             float: left;
             display: block;
@@ -59,12 +54,10 @@
             padding: 14px 16px;
             text-decoration: none;
         }
-
         nav a:hover {
             background-color: #ddd;
             color: blue;
         }
-
         button {
             background-color: #4CAF50;
             color: white;
@@ -73,12 +66,10 @@
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
-
         button:hover {
             background-color: #45a049;
             transform: scale(1.05);
         }
-
         input[type="submit"] {
             background-color: #4CAF50; 
             color: white; 
@@ -87,7 +78,6 @@
             cursor: pointer; 
             font-size: 16px; 
         }
-
         input[type="submit"]:hover {
             background-color: #45a049; 
         }
@@ -97,16 +87,12 @@
     <nav>
         <a href="index.html">Back to homepage</a>
     </nav>
-
     <h1>Expense Log</h1>
-
     <form id="expenseForm" class="expense-form">
         <label for="description">Description:</label>
         <input type="text" id="description" name="description" required>
-
         <label for="amount">Amount: (US $)</label>
         <input type="number" id="amount" name="amount" step=".01" required>
-
         <label for="category">Category:</label>
         <select id="category" name="category" required>
             <option value="food">Food</option>
@@ -116,20 +102,16 @@
             <option value="entertainment">Entertainment</option>
             <option value="other">Other</option>
         </select>
-
         <label for="birthdate">Select the date of transaction:</label>
         <input type="date" id="birthdate" name="birthdate">
         <input type="submit">
     </form>
-
     <button type="button" id="myButton" class="clear-button">Clear Expenses</button>
-
     <script>
         class ExpenseLogger {
             constructor() {
                 this.expenseArray = JSON.parse(localStorage.getItem("myArray")) || [];
             }
-
             logExpense(description, amount, category, transactionDate) {
                 this.expenseArray.push({ description, amount, category, transactionDate });
                 console.log(this.expenseArray);
@@ -137,13 +119,11 @@
                 this.clearForm();
                 this.redirectToUserPage();
             }
-
             clearExpenses() {
                 alert('Expenses have been cleared');
                 this.expenseArray = [];
                 this.updateLocalStorage();
             }
-
             updateLocalStorage() {
                 localStorage.setItem("myArray", JSON.stringify(this.expenseArray));
                 localStorage.setItem("fpercent", 0);
@@ -153,44 +133,36 @@
                 localStorage.setItem("upercent", 0);
                 localStorage.setItem("epercent", 0);
             }
-
             clearForm() {
                 document.getElementById('description').value = '';
                 document.getElementById('amount').value = '';
                 document.getElementById('category').value = '';
                 document.getElementById('birthdate').value = '';
             }
-
             redirectToUserPage() {
                 window.location.href = "userans.html";
             }
         }
-
         const expenseLogger = new ExpenseLogger();
-
         document.addEventListener('DOMContentLoaded', function () {
             const expenseForm = document.querySelector('.expense-form');
             const clearButton = document.querySelector('.clear-button');
-
             expenseForm.addEventListener('submit', function (event) {
                 event.preventDefault();
                 const description = document.getElementById('description').value;
                 const amount = parseFloat(document.getElementById('amount').value);
                 const category = document.getElementById('category').value;
                 const transactionDate = document.getElementById('birthdate').value;
-
                 if (description === "" || amount === "" || category === "" || transactionDate === "" || amount === "0") {
                     alert('Please enter all fields');
                     return;
                 }
-                if(amount<1){
-                    alert('Please enter a amount above 0');
+                if (amount < 1) {
+                    alert('Please enter an amount above 0');
                     return;
                 }
-
                 expenseLogger.logExpense(description, amount, category, transactionDate);
             });
-
             clearButton.addEventListener('click', function () {
                 expenseLogger.clearExpenses();
             });
