--- a/public/userans.html
+++ b/public/userans.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Back to homepage</a>
-        <a href="user.html">Back to user logging</a>
+        <a href="index.html">Back to Homepage</a>
+        <a href="user.html">Back to User Logging</a>
         <a href="visualizations.html">Categorial Expense Visualization</a>
         <a href="visualizations2.html">Daily Expense Visualization</a>
     </nav>
