--- a/public/visualizations.html
+++ b/public/visualizations.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Back to homepage</a>
-        <a href="user.html">User Logging</a>
+        <a href="index.html">Back to Homepage</a>
+        <a href="user.html">Back to User Logging</a>
     </nav>
     <div id="expense-chart"></div>
 </body>
