--- a/public/budgeting.html
+++ b/public/budgeting.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Back to homepage</a>
+        <a href="index.html">Back to Homepage</a>
     </nav>
     <main>
         <h2>Budgeting System</h2>
