--- a/public/educational.html
+++ b/public/educational.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Back to homepage</a>
+        <a href="index.html">Back to Homepage</a>
     </nav>
     <header>
         <h1>Financial Education</h1>
