--- a/public/user.html
+++ b/public/user.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav>
-        <a href="index.html">Back to homepage</a>
+        <a href="index.html">Back to Homepage</a>
     </nav>
     <h1>Expense Log</h1>
     <form id="expenseForm" class="expense-form">
