--- a/public/breakdown.html
+++ b/public/breakdown.html
@@ -9,6 +9,10 @@
     <title>User Expense Categorical Breakdown</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Back to homepage</a>
+        <a href="user.html">Back to user logging</a>
+    </nav>
     <h1 id="title">User Expense Categorical Breakdown</h1>
     <div id="userChart">
         User Categorical Expense Percentages
