--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <a href="user.html">User Logging</a>
         <a href="visualizations.html">Categorial Expense Visualizations</a>
         <a href="visualizations2.html">Daily Expense Visualizations</a>
+        <a href="breakdown.html">Category Expense Breakdown</a>
     </nav>
     <section id="class">
         <h1>Welcome to the Personal Finance Manager</h1>
