--- a/public/userans.html
+++ b/public/userans.html
@@ -11,6 +11,7 @@
         <a href="user.html">Back to User Logging</a>
         <a href="visualizations.html">Categorial Expense Visualization</a>
         <a href="visualizations2.html">Daily Expense Visualization</a>
+        <a href="breakdown.html">Category Expense Breakdown</a>
     </nav>
     
     <h2>Expense Table</h2>
@@ -24,7 +25,7 @@
             </tr>
         </thead>
     </table>
-    <table border="1" id="all">
+    <table border="1" id="percentages">
         <thead>
             <tr>
                 <th>Total</th>
@@ -37,7 +38,7 @@
             </tr>
         </thead>
     </table>
-    <table border="1" id="two">
+    <table border="1" id="avgamount">
         <thead>
             <tr>
                 <th>Average amount spent per day</th>
