--- a/public/breakdown.html
+++ b/public/breakdown.html
@@ -19,7 +19,7 @@
         <canvas id="PieChart"></canvas>
     </div>
     <div id="averageChart">
-        Average American Annual User Categorical Percentages 2022 (Per US Bureau of Labor Statistics)
+        Average American Annual User Expense Categorical Percentages 2022 (Per US Bureau of Labor Statistics)
         <canvas id="PieChart2"></canvas>
     </div>
     <div id="container">
