--- a/public/breakdown.html
+++ b/public/breakdown.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Back to homepage</a>
-        <a href="user.html">Back to user logging</a>
+        <a href="index.html">Back to Homepage</a>
+        <a href="user.html">Back to Expense Log</a>
     </nav>
     <h1 id="title">User Expense Categorical Breakdown</h1>
     <div id="userChart">
