--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="educational.html">Finance Education Page</a>
         <a href="budgeting.html">Budgeting System</a>
-        <a href="user.html">User Logging</a>
+        <a href="user.html">Expense Log</a>
         <a href="visualizations.html">Categorial Expense Visualizations</a>
         <a href="visualizations2.html">Daily Expense Visualizations</a>
         <a href="breakdown.html">Category Expense Breakdown</a>
