--- a/public/visualizations2.html
+++ b/public/visualizations2.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <a href="index.html">Back to Homepage</a>
-        <a href="user.html">Back to User Logging</a>
+        <a href="user.html">Back to Expense Log</a>
     </nav>
     <div id="plot"></div>
 </body>
