--- a/public/userans.html
+++ b/public/userans.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Stylesheet link -->
     <link rel="stylesheet" href="styles/userans.css"> 
+    <!-- JavaScript link -->
     <script src="javascript/userans.js" defer></script>
 </head>
 <body>
+    <!-- Navigation -->
     <nav>
         <a href="index.html">Back to Homepage</a>
         <a href="user.html">Back to User Logging</a>
@@ -13,7 +18,7 @@
         <a href="visualizations2.html">Daily Expense Visualization</a>
         <a href="breakdown.html">Category Expense Breakdown</a>
     </nav>
-    
+    <!-- Expense Table -->
     <h2>Expense Table</h2>
     <table border="1" id="dataTable">
         <thead>
@@ -25,6 +30,7 @@
             </tr>
         </thead>
     </table>
+    <!-- Categorical Percentages Table -->
     <table border="1" id="percentages">
         <thead>
             <tr>
@@ -38,6 +44,7 @@
             </tr>
         </thead>
     </table>
+    <!-- Average Amount Table -->
     <table border="1" id="avgamount">
         <thead>
             <tr>
