--- a/public/userans.html
+++ b/public/userans.html
@@ -13,7 +13,7 @@
     <!-- Navigation -->
     <nav>
         <a href="index.html">Back to Homepage</a>
-        <a href="user.html">Back to User Logging</a>
+        <a href="user.html">Back to Expense Log</a>
         <a href="visualizations.html">Categorial Expense Visualization</a>
         <a href="visualizations2.html">Daily Expense Visualization</a>
         <a href="breakdown.html">Category Expense Breakdown</a>
