--- a/public/breakdown.html
+++ b/public/breakdown.html
@@ -20,27 +20,27 @@
         <a href="user.html">Back to Expense Log</a>
     </nav>
     <!--Header Title -->
-    <h1 id="title">User Expense Categorical Breakdown</h1>
+    <h1 id="title">User Categorical Expense Breakdown</h1>
     <!-- Pie Chart graphing user category expense percentages -->
     <div id="userChart">
-        User Categorical Expense Percentages
+        User Categorical Expense Percentages Based on US $ Amount
         <canvas id="PieChart"></canvas>
     </div>
     <!--Pie Chart graphing average american annual user expense categorial percentages 2022-->
     <div id="averageChart">
-        Average American Annual User Expense Categorical Percentages 2022 (Per US Bureau of Labor Statistics)
+        Average American Annual User Expense Categorical Percentages 2022 Based on US $ Amount (Per US Bureau of Labor Statistics)
         <canvas id="PieChart2"></canvas>
     </div>
     <!-- Form -->
     <div id="container">
         <form>
-            Estimated Monthly Income in US $ (after tax):
+            Estimated Monthly Income in US $ :
             <!-- Number Input -->
             <input type="number" id="input">
             <!-- Submit Button -->
-            <input type="button" id="S" value="Submit" onclick="my()">
+            <input type="button" id="S" value="Submit" onclick="sub()">
             <!-- Reset Button -->
-            <input type="button" id="R" value="Reset" onclick="by()">
+            <input type="button" id="R" value="Reset" onclick="res()">
         </form>
     </div>
     <!-- Bar Chart graphing profit and user expense per month -->
