--- a/public/budgeting.html
+++ b/public/budgeting.html
@@ -28,11 +28,11 @@
         <!-- Budget form -->
         <form id="budgetForm">
             <!-- Weekly budget input -->
-            <label for="weeklyBudget">Set Weekly Budget:</label>
+            <label for="weeklyBudget">Set Weekly Budget (US $):</label>
             <input type="number" id="weeklyBudget" placeholder="Enter amount" required>
             
             <!-- Monthly budget input -->
-            <label for="monthlyBudget">Set Monthly Budget:</label>
+            <label for="monthlyBudget">Set Monthly Budget (US $):</label>
             <input type="number" id="monthlyBudget" placeholder="Enter amount" required>
             
             <!-- Save Budget button with event handlers -->
