--- a/public/visualizations2.html
+++ b/public/visualizations2.html
@@ -4,6 +4,8 @@
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Stylesheet link -->
+    <link rel="stylesheet" href="styles/visualizations2.css">
     <!-- Include Plotly library script -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!-- Stylesheet link -->
